@@ -532,6 +532,11 @@
       the function on <empty> parts, and rather sets corresponding
       results to \code{NA}, thanks to Suharto Anggono's patches in
       \PR{17280}.
+
+      \item The \code{duplicated()} method for data frames is now based
+      on \code{list}s (instead of string coercion).  Consequently
+      \code{unique()} is better distinguishing data frame rows, fixing
+      \PR{17369} and \PR{17381}.
     }
   }
 }
